--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.15",
     "nodemon": "^2.0.4",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
